# CoreCLI

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.test  LICENSE  README.md  TESTING.md  cspell.json  pip.conf  pyproject.toml  setup.cfg  setup.sh  test-docker.sh  test-with-act.sh
.github/workflows/: ci.yml  ci.yml.disabled  minimal-check.yml  test.yml  test.yml.disabled
commandline/: README.md  __init__.py  main.py
commandline/commands/: __init__.py  dev.py
commands/: README.md  __init__.py  __main__.py  __version__.py  completion.sh  config.py  main.py
commands/autogen/: .gitkeep
commands/subs/: README.md  __init__.py  dev.py  proj.py
commands/subs/dev/: __init__.py  all.py  completion.py  format.py  lint.py  precommit.py  test.py  test_cmd_dev.py  typecheck.py
commands/subs/package/: __init__.py  completion.py
commands/subs/proj/: __init__.py  completion.py  info.py  size.py  stats.py
commands/subs/release/: __init__.py  completion.py
commands/utils/: __init__.py  completion.py  config.py  exceptions.py  log.py  logging.py  paths.py  platform.py  subprocess.py
config/: build-config.json  project-config.json
src/: .keepme
tests/: README.md
tests/commands/: __init__.py  test_all_commands.py  test_cmd_completion.py  test_cmd_dev.py  test_cmd_main.py
tests/docker/: docker-compose.yml
tools/: requirements-lock.txt  requirements.txt
