[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "core-cli"
dynamic = ["version"]
description = "ehAye™ Core CLI - A modular command-line interface framework"
authors = [
    {name = "Val Neekman", email = "info@neekware.com"}
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
cli = "commands.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["commands", "commands.*"]
exclude = ["commands.tests*"]

[tool.setuptools.dynamic]
version = {attr = "commands.__version__"}

[tool.setuptools.package-data]
commands = ["bin/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["commands"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
